# toybox

./: .config  .config.old  .gitignore  BUILD.gn  PKGBUILD  main.c
lib/: args.c  lib.h  portability.c  portability.h
scripts/: regen_gn_instlist.sh  regen_gn_sources.sh
toys/other/: xxd.c
toys/pending/: mke2fs.c  stty.c
toys/posix/: ulimit.c
