import("//build/app.gni")
import("//build/resource.gni")

app_executable("toybox_main") {
  package_name = "toybox"
  output_name = "toybox"

  include_dirs = [ "." ]

  toyfile_sources = [
    "lib/help.c",
    "main.c",
  ]

  libfile_sources = [
    "lib/args.c",
    "lib/commas.c",
    "lib/deflate.c",
    "lib/dirtree.c",
    "lib/env.c",
    "lib/lib.c",
    "lib/linestack.c",
    "lib/llist.c",
    "lib/net.c",
    "lib/password.c",
    "lib/portability.c",
    "lib/tty.c",
    "lib/xwrap.c",
  ]

  toys_sources = [
    "toys/lsb/gzip.c",
    "toys/lsb/hostname.c",
    "toys/lsb/killall.c",
    "toys/lsb/md5sum.c",
    "toys/lsb/mknod.c",
    "toys/lsb/mktemp.c",
    "toys/lsb/mount.c",
    "toys/lsb/passwd.c",
    "toys/lsb/pidof.c",
    "toys/lsb/seq.c",
    "toys/lsb/su.c",
    "toys/lsb/sync.c",
    "toys/lsb/umount.c",
    "toys/net/ftpget.c",
    "toys/net/microcom.c",
    "toys/net/netcat.c",
    "toys/net/sntp.c",
    "toys/other/acpi.c",
    "toys/other/ascii.c",
    "toys/other/base64.c",
    "toys/other/blkid.c",
    "toys/other/bzcat.c",
    "toys/other/chroot.c",
    "toys/other/chrt.c",
    "toys/other/chvt.c",
    "toys/other/clear.c",
    "toys/other/count.c",
    "toys/other/devmem.c",
    "toys/other/dos2unix.c",
    "toys/other/factor.c",
    "toys/other/fallocate.c",
    "toys/other/flock.c",
    "toys/other/fmt.c",
    "toys/other/free.c",
    "toys/other/fsync.c",
    "toys/other/help.c",
    "toys/other/hexedit.c",
    "toys/other/ionice.c",
    "toys/other/makedevs.c",
    "toys/other/mcookie.c",
    "toys/other/mkpasswd.c",
    "toys/other/mountpoint.c",
    "toys/other/partprobe.c",
    "toys/other/pwdx.c",
    "toys/other/readahead.c",
    "toys/other/readlink.c",
    "toys/other/reset.c",
    "toys/other/rev.c",
    "toys/other/setfattr.c",
    "toys/other/setsid.c",
    "toys/other/shred.c",
    "toys/other/stat.c",
    "toys/other/sysctl.c",
    "toys/other/tac.c",
    "toys/other/taskset.c",
    "toys/other/timeout.c",
    "toys/other/truncate.c",
    "toys/other/uptime.c",
    "toys/other/usleep.c",
    "toys/other/vmstat.c",
    "toys/other/w.c",
    "toys/other/watch.c",
    "toys/other/which.c",
    "toys/other/xxd.c",
    "toys/other/yes.c",
    "toys/pending/bc.c",
    "toys/pending/dd.c",
    "toys/pending/diff.c",
    "toys/pending/expr.c",
    "toys/pending/fsck.c",
    "toys/pending/getopt.c",
    "toys/pending/host.c",
    "toys/pending/man.c",
    "toys/pending/mke2fs.c",
    "toys/pending/more.c",
    "toys/pending/stty.c",
    "toys/pending/telnet.c",
    "toys/pending/vi.c",
    "toys/pending/wget.c",
    "toys/pending/xzcat.c",
    "toys/posix/basename.c",
    "toys/posix/cal.c",
    "toys/posix/cat.c",
    "toys/posix/chgrp.c",
    "toys/posix/chmod.c",
    "toys/posix/cksum.c",
    "toys/posix/cmp.c",
    "toys/posix/comm.c",
    "toys/posix/cp.c",
    "toys/posix/cpio.c",
    "toys/posix/cut.c",
    "toys/posix/date.c",
    "toys/posix/df.c",
    "toys/posix/dirname.c",
    "toys/posix/du.c",
    "toys/posix/echo.c",
    "toys/posix/env.c",
    "toys/posix/expand.c",
    "toys/posix/false.c",
    "toys/posix/file.c",
    "toys/posix/find.c",
    "toys/posix/getconf.c",
    "toys/posix/grep.c",
    "toys/posix/head.c",
    "toys/posix/iconv.c",
    "toys/posix/id.c",
    "toys/posix/kill.c",
    "toys/posix/link.c",
    "toys/posix/ln.c",
    "toys/posix/logger.c",
    "toys/posix/ls.c",
    "toys/posix/mkdir.c",
    "toys/posix/mkfifo.c",
    "toys/posix/nice.c",
    "toys/posix/nl.c",
    "toys/posix/nohup.c",
    "toys/posix/od.c",
    "toys/posix/paste.c",
    "toys/posix/patch.c",
    "toys/posix/printf.c",
    "toys/posix/ps.c",
    "toys/posix/pwd.c",
    "toys/posix/renice.c",
    "toys/posix/rm.c",
    "toys/posix/rmdir.c",
    "toys/posix/sed.c",
    "toys/posix/sleep.c",
    "toys/posix/sort.c",
    "toys/posix/split.c",
    "toys/posix/strings.c",
    "toys/posix/tail.c",
    "toys/posix/tar.c",
    "toys/posix/tee.c",
    "toys/posix/test.c",
    "toys/posix/time.c",
    "toys/posix/touch.c",
    "toys/posix/true.c",
    "toys/posix/tty.c",
    "toys/posix/uname.c",
    "toys/posix/uniq.c",
    "toys/posix/unlink.c",
    "toys/posix/uudecode.c",
    "toys/posix/uuencode.c",
    "toys/posix/wc.c",
    "toys/posix/who.c",
    "toys/posix/xargs.c",
  ]

  cflags = [
    "-Wall",
    "-Wno-format",
    "-Wno-char-subscripts",
    "-Wno-deprecated-declarations",
    "-Wno-missing-field-initializers",
    "-Wno-pointer-arith",
    "-Wno-sign-compare",
    "-Wno-string-plus-int",
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
    "-funsigned-char",
    "-ffunction-sections",
    "-fdata-sections",
    "-fno-asynchronous-unwind-tables",
  ]

  configs -= [ "//build:wall_extra" ]
  defines = [
    "TOYBOX_VERSION=\"0.8.4\"",
    "TOYBOX_VENDOR=\"-onyx\"",
  ]

  sources = toyfile_sources + libfile_sources + toys_sources
}

symlink("symlinks") {
  sources = [
    "usr/bin/acpi",
    "usr/bin/arch",
    "usr/bin/ascii",
    "usr/bin/base64",
    "usr/bin/basename",
    "usr/bin/bc",
    "usr/bin/bunzip2",
    "usr/bin/bzcat",
    "usr/bin/cal",
    "usr/bin/cat",
    "usr/bin/catv",
    "usr/bin/chgrp",
    "usr/bin/chmod",
    "usr/bin/chown",
    "usr/bin/chroot",
    "usr/bin/chrt",
    "usr/bin/chvt",
    "usr/bin/cksum",
    "usr/bin/clear",
    "usr/bin/cmp",
    "usr/bin/comm",
    "usr/bin/count",
    "usr/bin/cp",
    "usr/bin/cpio",
    "usr/bin/crc32",
    "usr/bin/cut",
    "usr/bin/date",
    "usr/bin/dd",
    "usr/bin/devmem",
    "usr/bin/df",
    "usr/bin/diff",
    "usr/bin/dirname",
    "usr/bin/dnsdomainname",
    "usr/bin/dos2unix",
    "usr/bin/du",
    "usr/bin/echo",
    "usr/bin/egrep",
    "usr/bin/env",
    "usr/bin/expand",
    "usr/bin/expr",
    "usr/bin/factor",
    "usr/bin/fallocate",
    "usr/bin/false",
    "usr/bin/fgrep",
    "usr/bin/file",
    "usr/bin/find",
    "usr/bin/flock",
    "usr/bin/fmt",
    "usr/bin/free",
    "usr/bin/fsck",
    "usr/bin/fstype",
    "usr/bin/fsync",
    "usr/bin/ftpget",
    "usr/bin/ftpput",
    "usr/bin/getconf",
    "usr/bin/getopt",
    "usr/bin/grep",
    "usr/bin/groups",
    "usr/bin/gunzip",
    "usr/bin/gzip",
    "usr/bin/head",
    "usr/bin/help",
    "usr/bin/hexedit",
    "usr/bin/host",
    "usr/bin/hostname",
    "usr/bin/iconv",
    "usr/bin/id",
    "usr/bin/install",
    "usr/bin/ionice",
    "usr/bin/iorenice",
    "usr/bin/iotop",
    "usr/bin/kill",
    "usr/bin/killall",
    "usr/bin/killall5",
    "usr/bin/link",
    "usr/bin/ln",
    "usr/bin/logger",
    "usr/bin/logname",
    "usr/bin/ls",
    "usr/bin/makedevs",
    "usr/bin/man",
    "usr/bin/mcookie",
    "usr/bin/md5sum",
    "usr/bin/microcom",
    "usr/bin/mkdir",
    "usr/bin/mke2fs",
    "usr/bin/mkfifo",
    "usr/bin/mknod",
    "usr/bin/mkpasswd",
    "usr/bin/mktemp",
    "usr/bin/more",
    "usr/bin/mount",
    "usr/bin/mountpoint",
    "usr/bin/mv",
    "usr/bin/nc",
    "usr/bin/netcat",
    "usr/bin/nice",
    "usr/bin/nl",
    "usr/bin/nohup",
    "usr/bin/nproc",
    "usr/bin/od",
    "usr/bin/partprobe",
    "usr/bin/passwd",
    "usr/bin/paste",
    "usr/bin/patch",
    "usr/bin/pgrep",
    "usr/bin/pidof",
    "usr/bin/pkill",
    "usr/bin/printf",
    "usr/bin/ps",
    "usr/bin/pwd",
    "usr/bin/pwdx",
    "usr/bin/readahead",
    "usr/bin/readlink",
    "usr/bin/realpath",
    "usr/bin/renice",
    "usr/bin/reset",
    "usr/bin/rev",
    "usr/bin/rm",
    "usr/bin/rmdir",
    "usr/bin/sed",
    "usr/bin/seq",
    "usr/bin/setfattr",
    "usr/bin/setsid",
    "usr/bin/sha1sum",
    "usr/bin/shred",
    "usr/bin/sleep",
    "usr/bin/sntp",
    "usr/bin/sort",
    "usr/bin/split",
    "usr/bin/stat",
    "usr/bin/strings",
    "usr/bin/stty",
    "usr/bin/su",
    "usr/bin/sync",
    "usr/bin/sysctl",
    "usr/bin/tac",
    "usr/bin/tail",
    "usr/bin/tar",
    "usr/bin/taskset",
    "usr/bin/tee",
    "usr/bin/telnet",
    "usr/bin/test",
    "usr/bin/time",
    "usr/bin/timeout",
    "usr/bin/top",
    "usr/bin/touch",
    "usr/bin/true",
    "usr/bin/truncate",
    "usr/bin/tty",
    "usr/bin/umount",
    "usr/bin/uname",
    "usr/bin/uniq",
    "usr/bin/unix2dos",
    "usr/bin/unlink",
    "usr/bin/uptime",
    "usr/bin/usleep",
    "usr/bin/uudecode",
    "usr/bin/uuencode",
    "usr/bin/vi",
    "usr/bin/vmstat",
    "usr/bin/w",
    "usr/bin/watch",
    "usr/bin/wc",
    "usr/bin/wget",
    "usr/bin/which",
    "usr/bin/who",
    "usr/bin/whoami",
    "usr/bin/xargs",
    "usr/bin/xxd",
    "usr/bin/xzcat",
    "usr/bin/yes",
    "usr/bin/zcat",
  ]

  targets = [ "toybox" ]
}

group("toybox") {
  deps = [
    ":symlinks",
    ":toybox_main",
  ]
}
